pagina person adc

--- a/.env
+++ b/.env
@@ -31,4 +31,8 @@ VITE_IMG=https://image.tmdb.org/t/p/w500/
 VITE_IMG_ORIGINAL=https://image.tmdb.org/t/p/original/
 
 
+#PESQUISA PESSOAS COM ID
+
+VITE_PERSON=https://api.themoviedb.org/3/person/
+
 
