--- a/.env
+++ b/.env
@@ -24,6 +24,9 @@ VITE_TOP_MOVIES=https://api.themoviedb.org/3/movie/top_rated
 #RETORNA FILMES E SERIES MAIS POPULARES DA SEMANA
 VITE_TOP_DAY=https://api.themoviedb.org/3/trending/all/week
 
+#RETORNA SERIES DO DIA 
+VITE_TOP_SERIE_DAY=https://api.themoviedb.org/3/tv/on_the_air
+
 #RETORNA AS IMG DA API
 VITE_IMG=https://image.tmdb.org/t/p/w500/
 
