--- a/.env
+++ b/.env
@@ -25,14 +25,13 @@ VITE_TOP_MOVIES=https://api.themoviedb.org/3/movie/top_rated
 VITE_TOP_DAY=https://api.themoviedb.org/3/trending/all/week
 
 #RETORNA SERIES DO DIA 
-VITE_TOP_SERIE_DAY=https://api.themoviedb.org/3/tv/on_the_air
+VITE_TOP_SERIE_DAY=https://api.themoviedb.org/3/trending/tv/day
 
 #RETORNA AS IMG DA API
 VITE_IMG=https://image.tmdb.org/t/p/w500/
 
 #IMG TAM ORIGINAL 
 VITE_IMG_ORIGINAL=https://image.tmdb.org/t/p/original/
-
 
 #PESQUISA PESSOAS COM ID
 
