pag de series adc

--- a/.env
+++ b/.env
@@ -16,10 +16,10 @@ VITE_SEARCH=https://api.themoviedb.org/3/search/movie
 VITE_SEARCH_SERIES=https://api.themoviedb.org/3/search/tv
 
 #RETORNA SERIES MAIS BEM AVALIADAS
-VITE_TOP_SERIES=https://api.themoviedb.org/3/tv/top_rated
+VITE_TOP_SERIES=https://api.themoviedb.org/3/trending/tv/day 
 
 #RETORNA FILMES MAIS BEM AVALIADOS
-VITE_TOP_MOVIES=https://api.themoviedb.org/3/movie/top_rated
+VITE_TOP_MOVIES=https://api.themoviedb.org/3/trending/movie/day 
 
 #RETORNA FILMES E SERIES MAIS POPULARES DA SEMANA
 VITE_TOP_DAY=https://api.themoviedb.org/3/trending/all/week
