pag de atores adc

--- a/.env
+++ b/.env
@@ -19,7 +19,9 @@ VITE_SEARCH_SERIES=https://api.themoviedb.org/3/search/tv
 VITE_TOP_SERIES=https://api.themoviedb.org/3/trending/tv/day 
 
 #RETORNA FILMES MAIS BEM AVALIADOS
-VITE_TOP_MOVIES=https://api.themoviedb.org/3/trending/movie/day 
+VITE_TOP_MOVIES=https://api.themoviedb.org/3/trending/movie/day
+
+VITE_TOP_PERSON=https://api.themoviedb.org/3/trending/person/week
 
 #RETORNA FILMES E SERIES MAIS POPULARES DA SEMANA
 VITE_TOP_DAY=https://api.themoviedb.org/3/trending/all/week
