--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.1",
+    "react-type-animation": "^3.1.0",
     "sass": "^1.63.4",
     "sort-by": "^1.2.0"
   },
